--- a/test/output.css
+++ b/test/output.css
@@ -4,7 +4,7 @@
 
 /**
 
-  beccapurple in memoriam for Rebecca Alison Meyer: http://meyerweb.com/
+  rebeccapurple in memoriam for Rebecca Alison Meyer: http://meyerweb.com/
 
 */
 
